# pension_calc_backend

./: .gitignore  README.md  SamplePensionCalc.ods  manage.py  pyproject.toml
calc/: admin.py  models.py  serializer.py  test_unit.py  urls.py  views.py
calc/migrations/: 0001_initial.py
pension_calc_backend/: asgi.py  settings.py  urls.py  wsgi.py
